--- a/popup/popup.html
+++ b/popup/popup.html
@@ -12,6 +12,6 @@
       <button id="remove">解除黑名单</button>
     </div>
 
-    <script src="./popup.js"></script>
+    <script type="module" src="./popup.js"></script>
   </body>
 </html>
